# YoshisCookieRecomp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTINUE.md  DEBUG.md  HANDOFF.md  README.md  TCP.md  dump_followers.py  extras.c  extras.h  game.cfg  game.toml  inspect.py  inspect_emu.py  inspect_stack.py  nes_snapshot.c  nes_snapshot.h  nesrecomp.pin  nestopia_bridge.cpp  nestopia_bridge.h  nestopia_cmake.cmake  recomp_stack.c  recomp_stack.h  setup.bat  setup.sh  verify_mode.c  verify_mode.h
tests/: .gitignore  baseline.json  package.json  regression.test.ts  test.config.json  vitest.config.ts
